@@ -1,6 +1,6 @@
 FROM ysicing/debian AS getk8s
 
-ENV K8S_VER=v1.18.15
+ENV K8S_VER=v1.18.16
 
 RUN wget https://dl.k8s.io/$K8S_VER/kubernetes-server-linux-amd64.tar.gz && \
     tar zxf kubernetes-server-linux-amd64.tar.gz && \
