@@ -1,3 +1,8 @@
+## 20210218
+
+- k8s版本升级为1.18.16
+- docker-compose版本升级为1.28.3
+
 ## 20210210
 
 - helmv3版本升级为3.5.2
